trunk/Archive2/cd/7f198f5f24dff6/output
main.cpp: In function 'int main()':
main.cpp:10:2: error: 'map' was not declared in this scope
  map<char, int> month={{'a',1},{'b',2},{'c',3},{'d',4},{'e',5},{'h',6},{'l',7},{'m',8},{'p',9},{'r',10},{'s',11},{'t',12}};
  ^
main.cpp:10:6: error: expected primary-expression before 'char'
  map<char, int> month={{'a',1},{'b',2},{'c',3},{'d',4},{'e',5},{'h',6},{'l',7},{'m',8},{'p',9},{'r',10},{'s',11},{'t',12}};
      ^
main.cpp:26:9: error: 'month' was not declared in this scope
   mesei=month[mese];
         ^
